<?xml version="1.0"?>
<package format="2">
  <name>rosgpt</name>
  <version>0.0.0</version>
  <description>ROSGPT package for ROS1</description>
  <maintainer email="caituo1551@gmail.com">akoubaa</maintainer>
  <license>TODO: License declaration</license>

  <!-- 構建工具依賴 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 運行時依賴 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
